--- a/app/views/users/edit/edit-geological-form.template.html
+++ b/app/views/users/edit/edit-geological-form.template.html
@@ -5,7 +5,7 @@
 	</center>
     <div class="container-fluid">
         <ul class="nav nav-tabs group tabs">
-            <li ng-class="{active: isSet(1)}"><a href ng-click="setTab(1)">Số hiệu mẫu vật</a></li>
+            <li ng-class="{active: isSet(1)}"><a href ng-click="setTab(1)">Số hiệu</a></li>
             <li ng-class="{active: isSet(2)}"><a href ng-click="setTab(2)">Tên mẫu vật</a></li>
             <li ng-class="{active: isSet(3)}"><a href ng-click="setTab(3)">Số lượng</a></li>
             <li ng-class="{active: isSet(4)}"><a href ng-click="setTab(4)">DL thu mẫu</a></li>
