--- a/app/views/users/edit/edit-animal-form.template.html
+++ b/app/views/users/edit/edit-animal-form.template.html
@@ -1,7 +1,7 @@
 <form id="form-content" name="FormData">
 	<center><h3>Chỉnh sửa mẫu dữ liệu động vật > Đề tài: {{maDeTai}}</h3></center>
 	<div class="container-fluid">
-		<input type="text" name="id" style="display: none;" ng-model="data.id">
+		<input type="text" name="id" id="obId" style="display: none;" ng-model="data.id">
 		<ul class="nav nav-tabs group tabs">
 	    	<li ng-class="{active: isSet(1)}"><a href ng-click="setTab(1)">Số hiệu</a></li>
 	    	<li ng-class="{active: isSet(2)}"><a href ng-click="setTab(2)">Tên mẫu vật</a></li>
